--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
   </head>
   <body>
-    - Hello World! &#x1F609;
+    ― Hello World! &#x1F609;
   </body>
 </html>
